# featurless

./: .gitignore  README.md
log/: .clang-format  .clang-tidy  CMakeLists.txt
log/cmake/: cache.cmake  cxx.cmake  cxx_warnings.cmake  project.cmake
log/include/featurless/: log.h
log/sources/: CMakeLists.txt  log.cpp  logger.cpp
log/test/: CMakeLists.txt  test_main.cpp
test/: .clang-format  .clang-tidy  CMakeLists.txt  README.md
test/cmake/: analyzers.cmake  cxx_warnings.cmake  project.cmake  sanitizer.cmake
test/include/featurless/: test.h
test/sources/: CMakeLists.txt  tests.cpp
test/test/: CMakeLists.txt  test_main.cpp
